fixed navbar position when toggling, fixed sign-in spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,6 +49,8 @@ transform: translate(-60%, 0);
 
 .enter-sesh {
   margin: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .enter-sesh .field input {
@@ -70,7 +72,7 @@ transform: translate(-60%, 0);
 
 #char-hud-up { display: none; }
 
-button:focus {outline:0;}
+/* button:focus {outline:0;}
 
 button:active {
 outline: none;
@@ -79,7 +81,7 @@ border: none;
 
 button {
   color: #c0c0c0;
-}
+} */
 
 .presently {
     color: #fff;
@@ -104,6 +106,7 @@ button {
 .columnar-stacking { flex-direction: column; }
   .padding-topper{ order: 1; }
   .event-hud { order: 2;
+              width: 300px;
                display: flex; }
     .mystery-console { display: flex;
                        order: 1;
